metadata/force-app/main/default/objects/ccrz__E_ProductInventoryItem__c/fields/ccrz__AvailabilityMessageRT__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AvailabilityMessageRT__c</fullName>
    <description>Rich text field for Availability Messages such as &quot;Available&quot; or &quot;BackOrder&quot;.</description>
    <label>Availability Message RT</label>
    <length>256</length>
    <type>Html</type>
</CustomField>