metadata/force-app/main/default/objects/ccrz__E_ProductInventoryItem__c/fields/ccrz__ProductItem__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ProductItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product for which the inventory is being specified</description>
    <label>Product Item</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>Product Inventory Items</relationshipLabel>
    <relationshipName>Product_Inventory_Items</relationshipName>
    <type>Lookup</type>
</CustomField>