metadata/force-app/main/default/objects/ccrz__E_ProductInventoryItem__c/fields/ccrz__Status__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Status__c</fullName>
    <description>Inventory item status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Stock</fullName>
            </value>
            <value>
                <fullName>Out of Stock</fullName>
            </value>
            <value>
                <fullName>Pre Order</fullName>
            </value>
            <value>
                <fullName>Back Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>